--- a/style.css
+++ b/style.css
@@ -1,1 +1,5 @@
+document.querySelector("form").addEventListener("submit", function(e) {
+  e.preventDefault();
+  alert("మీ సందేశం విజయవంతంగా పంపబడింది!");
+});
 
